# geminipanel

./: Cargo.toml  README.org  gemini.service  notes.org  service.sh  test.yml  testinputs.csv
.github/workflows/: rust.yml
src/: bindfiles.rs  main.rs  simulation.rs  utility.rs
src/input/: bitevents.rs  mcp23017.rs  mod.rs  stdin.rs
src/input/mcp23017/: config.rs  mod.rs
