[package]
name = "gemini-panel"
version = "0.1.0"
authors = ["Derek Chen-Becker <dchenbecker@gmail.com>"]
edition = "2018"

[dependencies]
i2cdev       = "0.3.2"
log          = "0.4.1"
env_logger   = "0.5.6"
piston-music = "0.25.0"
maplit       = "1.0.1"
serde        = { version = "1.0", features = ["derive"] }
serde_yaml   = "0.8"