[package]
name = "gemini-panel"
version = "0.1.0"
authors = ["Derek Chen-Becker <dchenbecker@gmail.com>"]
edition = "2018"

[dependencies]
actix        = "0.9"
env_logger   = "0.5.6"
i2cdev       = "0.3.2"
log          = "0.4.1"
maplit       = "1.0.1"
piston-music = "0.25.0"
serde        = { version = "1.0", features = ["derive"] }
serde_yaml   = "0.8"
# Actix uses this version, but we need it for async IO
tokio        = { version = "0.2.6", features = ["io-std", "io-util", "stream"] }